ndb - bug#58110 - fix incorrect break when doSend returns -1